overlays/prod/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: be-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: prod-be
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: prod-be
    spec:
      containers:
        - image: jcy0308/ice-gs-thesis-be-prod
          imagePullPolicy: Always
          name: be
          ports:
            - containerPort: 4000
          resources:
            requests:
              cpu: "1"
