overlays/prod/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: be-service
spec:
  ports:
    - port: 80
      targetPort: 4000
      protocol: TCP
  type: NodePort
  selector:
    app.kubernetes.io/name: prod-be
